# scannertools

./: .gitignore  .travis.yml  Dockerfile  README.md  new_api_test.py  setup.cfg  setup.py  travis.sh
doc/: Makefile  conf.py  index.rst
doc/_static/: custom.css
docs/: Makefile  conf.py  index.rst
draft/scannertools_pytorch/: generate_trace.py  setup.py
draft/scannertools_pytorch/scannertools_pytorch/: __init__.py  resnet.py
draft/scannertools_pytorch/scannertools_pytorch_cpp/: pytorch.cpp  scannertools_pytorch.proto
draft/scannertools_pytorch/tests/: test_all.py
draft/scannertools_tfcpp/: setup.py
draft/scannertools_tfcpp/scannertools_tfcpp_cpp/: CMakeLists.txt  tfcpp.cpp
examples/: clothing_detection.py  face_detection.py  face_embedding.py  frame_montage.py  gender_detection.py  kube.py  object_detection.py  optical_flow.py  pose_detection.py  shot_detection.py  volume.py
scannertools/: README.md  __init__.py  audio.py  brightness.py  clothing_detection.py  contrast.py  face_detection.py  face_embedding.py  face_landmark_detection.py  gender_detection.py  hairstyle_detection.py  histograms.py  imgproc.py  kube.py  object_detection.py  optical_flow.py  pipeline.py  pipeline2.py  pose_detection.py  prelude.py  setup.py  sharpness.py  sharpness_bboxes.py  shot_detection.py  test_audio.py  test_caption.py  tf_vis_utils.py  transcript_alignment.py  video.py  vis.py
scannertools/cpp_ops/: CMakeLists.txt  flow_histogram_kernel_cpu.cpp  imgproc.proto
scannertools/kernels/: bbox_draw_kernel.py  obj_detect_kernel.py  pose_draw_kernel.py
scannertools/scannertools/: __init__.py  densepose_detection.py  face_detection.py  face_embedding.py  gender_detection.py  instance_segmentation.py  maskrcnn_detection.py  object_detection.py  tensorflow.py  tf_vis_utils.py  torch.py  types.py  vis.py
scannertools/scannertools/imgproc/: __init__.py
scannertools/scannertools/misc/: __init__.py
scannertools/scannertools/old/: __init__.py  bboxes.py  face_detection.py  face_embedding.py  histograms.py  kube.py  object_detection.py  optical_flow.py  pipeline.py  pipeline2.py  pipeline3.py  pose_detection.py  prelude.py  test_caption.py  transcript_alignment.py  video.py
scannertools/scannertools/old/cpp_ops/: imgproc.cpp
scannertools/scannertools/ops/: __init__.py  face_detection.py  shot_detection.py
scannertools/scannertools/storage/: __init__.py  audio.py  caption.py  files_storage.py  python.py
scannertools/scannertools_cpp/: CMakeLists.txt  scannertools.proto
scannertools/scannertools_cpp/imgproc/: CMakeLists.txt  blur_kernel_cpu.cpp  convert_color_kernel.cpp  feature_extractor_kernel.cpp  feature_matcher_kernel.cpp  frame_difference_kernel_cpu.cpp  image_decoder_kernel_cpu.cpp  image_decoder_kernel_gpu.cpp  image_encoder_kernel_cpu.cpp  montage_kernel_cpu.cpp  montage_kernel_gpu.cpp  optical_flow_kernel_cpu.cpp  optical_flow_kernel_gpu.cpp  resize_kernel.cpp  scannertools_imgproc.proto
scannertools/scannertools_cpp/io/: CMakeLists.txt  audio_source.cpp  captions_source.cpp  files_sink.cpp  files_source.cpp  packed_file_source.cpp  python_source.cpp
scannertools/scannertools_cpp/misc/: CMakeLists.txt
scannertools/scannertools_cpp/storage/: CMakeLists.txt  audio_source.cpp  captions_source.cpp  files_sink.cpp  files_source.cpp  packed_file_source.cpp  python_source.cpp  scannertools_storage.proto
scannertools/tests/: test_all.py
scannertools_caffe/: setup.py
scannertools_caffe/scannertools_caffe/: __init__.py  pose_detection.py
scannertools_caffe/scannertools_caffe_cpp/: CMakeLists.txt  caffe_input_kernel.cpp  caffe_input_kernel.h  caffe_input_kernel_cpu.cpp  caffe_input_kernel_gpu.cpp  caffe_kernel.cpp  caffe_kernel.h  caffe_kernel_cpu.cpp  caffe_kernel_gpu.cpp  cpm2_input_kernel_gpu.cpp  cpm2_kernel.cpp  cpm2_output_kernel_cpu.cpp  facenet_input_kernel_cpu.cpp  facenet_input_kernel_gpu.cpp  facenet_kernel.cpp  facenet_output_kernel_cpu.cpp  faster_rcnn_kernel.cpp  faster_rcnn_output_kernel_cpu.cpp  openpose_kernel.cpp  scannertools_caffe.proto  yolo_output_kernel_cpu.cpp
scannertools_caffe/tests/: test_all.py
scannertools_infra/: setup.py
scannertools_infra/scannertools_infra/: __init__.py  tests.py
scannertools_pytorch/: generate_trace.py
scannertools_pytorch/scannertools_pytorch_cpp/: CMakeLists.txt  pytorch.cpp
scannertools_pytorch/tests/: test_all.py
scannertools_sql/: setup.py
scannertools_sql/scannertools_sql/: __init__.py  storage.py
scannertools_sql/scannertools_sql_cpp/: CMakeLists.txt  scannertools_sql.proto  sql.cpp  sql.h  sql_sink.cpp  sql_source.cpp
scannertools_sql/tests/: test_all.py
scannertools_tfcpp/: setup.py
scannertools_tfcpp/scannertools_tfcpp/: __init__.py
scannertools_tfcpp/scannertools_tfcpp_cpp/: CMakeLists.txt  tfcpp.cpp
scannertools_tfcpp/tests/: test_all.py
scripts/: clean-all.sh  install-all.sh  test-all.sh  travis-build.sh  travis-publish.sh
tests/: test_all.py  test_video.py
tixelbox/: __init__.py  bbox_nms_kernel.py  face_detection.py  obj_detect_kernel.py  object_detection.py  optical_flow.py  pose_detection.py  prelude.py  shot_detection.py  tf_vis_utils.py  video.py  vis.py
tixelbox/kernels/: bbox_draw_kernel.py  bbox_nms_kernel.py  flow_draw_kernel.py
tixelbox/object_detection/: __init__.py  object_detection.py
tixelbox/vis_utils/: __init__.py  vis_utils.py
